2010-03-12   Theodore Kilgore <kilgota@auburn.edu>
	* digi_postprocess.c: improvements in digi_first_decompress()

2009-05-16   Theodore Kilgore <kilgota@auburn.edu>
	* library.c: camera_manual() updated to mention new disney pix micro.

2009-05-10   Theodore Kilgore <kilgota@auburn.edu>
	* library.c: The disney pix micro reported by Adam Piggs also reported
	by Roman Kononov <kononov@ftml.net>. delete_all_func() support added for 
	this camera. delete_all_func() must also check if camera is initialized.
	Credit comment removed, information moved here. Credits go in the 
	ChangeLog file, not in the middle of the code.
	* digigr8.c: improvements to digi_delete_all()
	* README.9052: Added, to describe the new camera.
	* digi_postprocess.c: indentation fixes. 


2008-11-22   Marcus Meissner <marcus@jet.franken.de>

	* library.c: Added another version of the disney pix micro, reported
	  by Adam Piggs <adam@piggz.co.uk>

2008-05-11   Theodore Kilgore <kilgota@auburn.edu>
	* README.913D: References to nonexistent README.digigr8 corrected. 

2008-04-22   Theodore Kilgore <kilgota@auburn.edu>  
	* digi_postprocess.c: white_balance() added 
	* library.c: gp_ahd_interpolate() used instead of gp_bayer_interpolate()
		     white_balance() hooked up. 
		     
2008-01-23   Theodore Kilgore <kilgota@auburn.edu>  
	* library.c: camera_capture_preview() revised to be in line with recent
	revisions of gphoto2. Also digi_init() is now not called unless needed,
	because camera_capture_preview() does not need it. Functions which need
	it now check init_done and ask for digi_init() if init_done is still 0.
	* digigr8.c: init_done parameter is set now to 1 in digi_init().
	* digigr8.h: init_done parameter added to CameraPrivateLibrary.

2008-01-22   Theodore Kilgore <kilgota@auburn.edu>  
	* digi_postprocess.c: Fixed memory leak in second-stage decompression
	function. 
	* README.*: Refers to the raw file converter, added today in 